<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="top|center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/actionbar_padding_title"
        android:paddingBottom="@dimen/actionbar_padding_title"
        android:background="@drawable/bg_header"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_centerVertical="true"
            android:id="@+id/back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:textAlignment="center"
            android:textColor="@color/colorBrown"
            android:textSize="@dimen/font_screen_home"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="top|center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/rounded_edittext"
                android:text=""
                android:hint="@string/group_name"
                android:textColor="@color/colorBrown"
                android:padding="@dimen/edittext_pading"
                android:layout_marginBottom="@dimen/edittext_margin_bottom"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/rounded_edittext"
                android:text=""
                android:hint="@string/fullname"
                android:textColor="@color/colorBrown"
                android:padding="@dimen/edittext_pading"
                android:layout_marginBottom="@dimen/edittext_margin_bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin_home">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:text="@string/add_more"
                android:textAlignment="center"
                android:background="@drawable/button_bg"
                android:textSize="@dimen/font_screen_home"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top_text"
                android:layout_marginBottom="@dimen/margin_bottom_text"
                android:id="@+id/btnadd" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:text="@string/save"
                android:textAlignment="center"
                android:background="@drawable/button_bg"
                android:textSize="@dimen/font_screen_home"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top_text"
                android:layout_marginBottom="@dimen/margin_bottom_text"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
