<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin_home"
    android:paddingRight="@dimen/activity_vertical_margin_home"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|bottom">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:src="@mipmap/logo"
            android:layout_alignParentBottom = "true"
            android:layout_gravity="center|bottom"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin_home"
        android:layout_marginRight="@dimen/activity_vertical_margin_home"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_height"
            android:text="@string/single_player"
            android:textAlignment="center"
            android:background="@drawable/button_bg"
            android:textSize="@dimen/font_screen_home"
            android:textColor="@color/colorWhite"
            android:paddingTop="@dimen/padding_top_text"
            android:layout_marginBottom="@dimen/margin_bottom_text"
            android:id="@+id/singleplay"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_height"
            android:text="@string/multi_player"
            android:textAlignment="center"
            android:background="@drawable/button_bg"
            android:textSize="@dimen/font_screen_home"
            android:textColor="@color/colorWhite"
            android:paddingTop="@dimen/padding_top_text"
            android:layout_marginBottom="@dimen/margin_bottom_text"
            android:gravity="center_horizontal"
            android:id="@+id/multiplay" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_height"
            android:text="@string/quit"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg"
            android:textSize="@dimen/font_screen_home"
            android:textColor="@color/colorWhite"
            android:paddingTop="@dimen/padding_top_text"
            android:gravity="center_horizontal"
            android:id="@+id/quit" />
    </LinearLayout>

</LinearLayout>
